src/objects/CE_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Member__c</fullName>
        <label>Assigned Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities_User_Assigned_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Challenge_Type__c</fullName>
        <label>Challenge Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Member_Assigned__c</fullName>
        <label>Date Member Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Minimum_Viable_Score__c</fullName>
        <label>Minimum Viable Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notification_Code__c</fullName>
        <label>Notification Code</label>
        <picklist>
            <picklistValues>
                <fullName>No Registered Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Submissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reviews Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Registration Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfRequirements__c</fullName>
        <label>Number of Requirements</label>
        <summaryForeignKey>CE_Requirement__c.CE_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Possible_Score__c</fullName>
        <label>Possible Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registrants__c</fullName>
        <label>Registrants</label>
        <summaryForeignKey>CE_Registration__c.CE_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Resource_Commitment__c</fullName>
        <description>% of utilization required/expected (e.g. 25%)</description>
        <inlineHelpText>% of utilization required/expected (e.g. 25%)</inlineHelpText>
        <label>Resource Commitment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reviews_Completed__c</fullName>
        <label>Reviews Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_Story__c</fullName>
        <label>Story</label>
        <referenceTo>CE_Story__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Submissions__c</fullName>
        <label>Submissions</label>
        <summaryForeignKey>CE_Submission__c.CE_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Awards__c</fullName>
        <label>Total Awards</label>
        <summarizedField>CE_Award__c.Payment__c</summarizedField>
        <summaryForeignKey>CE_Award__c.CE_Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>hasAwards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasAwards</label>
        <type>Checkbox</type>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assigned_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>